tests/baselines/reference/nameCollisions.errors.txt
==== tests/cases/compiler/nameCollisions.ts (9 errors) ====
    // bug 738635: Error for clinterfaces is gone
    
    module T {
        var x = 2;
    
        module x { // error
               ~
!!! error TS2000: Duplicate identifier 'x'.
            export class Bar {
                test: number;
            }
        }
    
        module z {
            var t;
        }
        var z; // error
            ~
!!! error TS2000: Duplicate identifier 'z'.
    
        module y {
            var b;
        }
    
        class y { } // error
              ~
!!! error TS2000: Duplicate identifier 'y'.
    
        var w;
        module w { } //ok
    
        var f;
        function f() { } //error
                 ~
!!! error TS2000: Duplicate identifier 'f'.
    
        function f2() { }
        var f2; // error
            ~~
!!! error TS2000: Duplicate identifier 'f2'.
    
        var i;
        interface i { } //ok
    
        class C { }
        function C() { } // error
                 ~
!!! error TS2000: Duplicate identifier 'C'.
    
        function C2() { }
        class C2 { } // error
              ~~
!!! error TS2000: Duplicate identifier 'C2'.
    
        function fi() { }
        interface fi { } // ok
    
        class cli { }
        interface cli { } // error
                  ~~~
!!! error TS2000: Duplicate identifier 'cli'.
    
        interface cli2 { }
        class cli2 { } // error
              ~~~~
!!! error TS2000: Duplicate identifier 'cli2'.
    }